# DaxAlgo-Terminal

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  Directory.Build.targets  LICENSE-EXCEPTIONS.md  README.md  TradingTerminal.Linux.slnf  TradingTerminal.Linux.slnx  TradingTerminal.Windows.Basic.slnf  TradingTerminal.Windows.Intermediate.slnf  TradingTerminal.Windows.Professional.slnf  TradingTerminal.Windows.slnf  TradingTerminal.Windows.slnx  TradingTerminal.sln  appsettings.DevLive.json  appsettings.DevReplay.json  appsettings.DevSim.json  appsettings.json  build-and-test.ps1  claude-here.bat  claude-launch.bat  docker-compose.yml  ideas.md
tests/: CMakeLists.txt  test_event_engine.cpp  test_portfolio.cpp  test_tick_buffer.cpp
tests/TradingTerminal.Tests/: AssemblyInfo.cs  TradingTerminal.Tests.csproj
tests/TradingTerminal.Tests.Headless/: TradingTerminal.Tests.Headless.csproj
tests/TradingTerminal.Tests.Headless/Backtest/: BacktestSessionTests.cs  FeeModelTests.cs  StatisticsCalculatorTests.cs
tests/TradingTerminal.Tests.Headless/Backtesting/: BacktestEngineLifecycleTests.cs  BacktestEngineTests.cs  EngineParityTests.cs  GpuFallbackTests.cs  GpuParityTests.cs  KernelRegistryTests.cs  LegacyBridgeTests.cs  StoreFeedAndPortfolioTests.cs  WalkForwardGridTests.cs  WorkerCleanupTests.cs  WorkerClientTests.cs  WorkerProtocolTests.cs  WorkerTestData.cs
tests/TradingTerminal.Tests.Headless/Infrastructure/: ConnectionManagerTests.cs  UpstoxParsingTests.cs
tests/TradingTerminal.Tests.Headless/MarketData/: FootprintTimeBucketerTests.cs  InstrumentDiscoveryServiceTests.cs  InstrumentRegistryTests.cs  MarketDataHubTests.cs  MarketDataRepositoryTests.cs  MicrostructureTests.cs  NpgsqlMarketDataStoreTests.cs  PerBrokerSqliteMarketDataStoreTests.cs  QuestDbMarketDataStoreTests.cs  QuestDbNativeBootstrapperTests.cs  SqliteModelRegistryTests.cs
tests/TradingTerminal.Tests.Headless/Ml/: DepthStepSamplerTests.cs  FootprintNextBarPredictorTests.cs  ForecasterAlgorithmTests.cs  ModelSerializationTests.cs  OnlineLinearRegressionTests.cs  OrderBookEventLabelerTests.cs  OrderBookMicroPredictorTests.cs  RollingBrierScoreTests.cs  RollingForecastMetricsTests.cs  TripleBarrierLabelerTests.cs
tests/TradingTerminal.Tests.Headless/Plugins/: AuthenticodeSignatureInspectorTests.cs  DaxPluginPackageTests.cs  DaxStrategyBundleTests.cs  ExternalPluginLoadTests.cs  FeedSignatureVerifierTests.cs  FeedSignerTests.cs  PluginCatalogInstallerTests.cs  PluginCatalogTests.cs  PluginConsentTests.cs  PluginFeedClientTests.cs  PluginIntegrityTests.cs  PluginLifecycleTests.cs  PluginLoaderTests.cs  PluginPolicyScannerTests.cs  PluginRegistrarGuardTests.cs  PluginSecurityTests.cs  StrategyBundleStoreTests.cs
tests/TradingTerminal.Tests.Headless/Quant/: FirstPassageTests.cs  IsotonicCalibrationTests.cs  KyleResidualTests.cs  LedoitWolfTests.cs  NeweyWestTests.cs  QuantTestRandom.cs  SignalWeightsTests.cs  SurfaceLabMathTests.cs
tests/TradingTerminal.Tests.Headless/Regime/: AdvancedRegimeCalculatorTests.cs  BarTimeframeAggregatorTests.cs  MarkovRegimeDetectorTests.cs
tests/TradingTerminal.Tests.Headless/Research/: FactorComputationTests.cs  HttpEnvResolverClientTests.cs  HttpPaperIngestClientTests.cs  ReproJobStoreTests.cs  ReproSignalBridgeTests.cs
tests/TradingTerminal.Tests.Headless/Strategies/: ApexScalperWarmupTests.cs  AuthoredStrategyComposerTests.cs  RoslynStrategyCompilerTests.cs  StrategyCodegenTests.cs  StrategyParametersTests.cs
tests/TradingTerminal.Tests.Headless/TestSupport/: ImmediateDispatcher.cs
tests/TradingTerminal.Tests.Headless/Ui/: PortedStrategyResolutionTests.cs  StrategyCatalogViewModelTests.cs
tests/TradingTerminal.Tests/AiAnalyst/: AiAnalystEnricherTests.cs  AiAnalystViewModelTests.cs  HttpAiAnalystClientTests.cs  NullAiAnalystClientTests.cs
tests/TradingTerminal.Tests/Analytics/: CorrelationCalculatorTests.cs
tests/TradingTerminal.Tests/Authoring/: VibeQuantTranscriptTests.cs
tests/TradingTerminal.Tests/Backtest/: BacktestStoreSourceTests.cs  DuckDbParquetQueryServiceTests.cs  MonteCarloTests.cs  ParquetTradeTapeTests.cs
tests/TradingTerminal.Tests/Backtesting/: GeneticAndWalkForwardTests.cs
tests/TradingTerminal.Tests/Controls/: ChartPanelTests.cs  ChartsViewModelLifetimeTests.cs  ComposedStrategyViewTests.cs  InstrumentPickerFilterTests.cs  InstrumentPickerTests.cs  LiveSignalStrategyViewModelLifetimeTests.cs  RecorderPanelViewTests.cs  ThemeManagerTests.cs  WpfTestApp.cs
tests/TradingTerminal.Tests/Infrastructure/: BinanceParsingTests.cs  ConnectionManagerTests.cs  LondonStrategicEdgeParsingTests.cs  SimulatedBrokerClientTests.cs
tests/TradingTerminal.Tests/Login/: LoginFormEditionCompositionTests.cs  ServiceDependencyViewModelTests.cs
tests/TradingTerminal.Tests/MarketData/: ArchiveDepthRoundTripTests.cs  InstrumentDiscoveryServiceTests.cs  LocalParquetLakeExporterTests.cs  MarketDataIngestServiceTests.cs  MarketDataRepositoryTests.cs  MicrostructureTests.cs  NpgsqlMarketDataStoreTests.cs  OrderFlowImbalanceTests.cs  QuestDbMarketDataStoreTests.cs  SqliteMarketDataStoreTests.cs
tests/TradingTerminal.Tests/OrderFlowPressureMap/: PressureMapCalculatorTests.cs
tests/TradingTerminal.Tests/Quant/: CurveFittingTests.cs  DeflatedSharpeTests.cs  FirstPassageTests.cs  HawkesProcessTests.cs  KyleResidualTests.cs  (+3 more)
tools/cpp-backtester/: CMakeLists.txt  README.md
tools/python-ml/: .gitignore  README.md  daxalgo_ml.spec  pyproject.toml
(+2455 files in other folders)
