[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daxalgo-ml"
version = "0.1.0"
description = "Local FastAPI sidecar for the DaxAlgo Terminal AI Market Analyst."
requires-python = ">=3.11"
authors = [{ name = "DaxAlgo" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "mplfinance>=0.12.10b0",
    # TA-Lib is a C-extension and must be installed separately on the user's box (vcpkg / wheels).
    # Listed here so `pip install -e .[full]` picks it up when wheels are available.
    "TA-Lib>=0.4.32; platform_system != 'Windows'",
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "openai>=1.40",
    "anthropic>=0.34",
    "httpx>=0.27",
    "tenacity>=8.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "pyinstaller>=6.10",
]

[project.scripts]
daxalgo-ml = "daxalgo_ml.app:main"

[tool.setuptools.packages.find]
include = ["daxalgo_ml*"]
exclude = ["tests*", "build*", "dist*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
